--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+curso-frontend-developer-practico/
 jspm_packages/
 
 # TypeScript v1 declaration files
