--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "react1",
   "version": "1.0.0",
   "description": "practica con react",
-  "main": "./src/index.js",
+  "main": "/React1/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --config webpack.config.dev.js",
+    "start": "webpack serve --open --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.js"
   },
   "repository": {
@@ -22,6 +22,13 @@
     "url": "https://github.com/Dannymx29/React1/issues"
   },
   "homepage": "https://github.com/Dannymx29/React1#readme",
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1"
+  },
   "dependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
@@ -35,12 +42,5 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
-  },
-  "devDependencies": {
-    "css-loader": "^6.7.1",
-    "mini-css-extract-plugin": "^2.6.1",
-    "sass": "^1.55.0",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1"
   }
 }
