--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   },
   "dependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-runtime": "^7.19.1",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
+    "axios": "^1.0.0",
     "babel-loader": "^8.2.5",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
