--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react1",
   "version": "1.0.0",
   "description": "practica con react",
-  "main": "/React1/src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.config.dev.js",
